# calendar

./: .gitignore  LICENSE  Makefile  README.md  location_map.html  pyproject.toml
bbdd/: blacklist_locations.csv  locations.csv
src/: main.py
